# MemALL

./: $null  .coverage  .env.example  .gitignore  CHANGELOG.md  CLAUDE.md  COMPARISON.md  CONTRIBUTING.md  EMemALLREADME.md  LICENSE  MemALL_Function_Spec.md  QUICKSTART.md  README.md  README.zh-CN.md  RELEASE_NOTES_v0.1.0.md  __analysis.json  __analyze.js  __check.js  __check2.js  __check_all.ps1  __check_env.ps1  __deep_data.json  __find_db.js  __find_db2.js  __find_python.js  __probe.js  __probe2.js  __remember_memall_analysis.md  __run_analysis3.js  __run_v2.js  __run_v3.js  __run_v4.js  __run_via_node.js  __summarize_deep.js  __test_mcp.js  __wrap.js  _get_lines.ps1  _head_lines.cmd  debt-page-snapshot.yml  install.py  (+9 more)
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml
conversations/nomi-temp-ws_019f88ab-655e-7292-baae-6f5818ac1eff/: env_detect.ps1  env_detect2.ps1
conversations/nomi-temp-ws_019f88bb-05dc-7a51-99b2-89200a7bd148/.nomi/: FIX_PLAN.md  cleanup.ps1
debt/: DASHBOARD.md  INVENTORY.md  dashboard.html  scan.py  update_html.py  update_html_v2.py
desktop/: index.html
docs/: changelog_v0.1.4.md
frontend/: index.html
obsidian-plugin/: main.js  manifest.json  styles.css
plugin/memall-sync-v2/: main.js  manifest.json
src/memall/: __main__.py  agent_memory.py  bridge.py  config.py  gateway.py  gateway_api.py  gateway_federation.py  gateway_html.py  gateway_intelligence.py  gateway_utils.py  gateway_v30.py  lark_notify.py  onboarding.py
src/memall/api/: server.py  start_server.py
src/memall/bridge/: config.py  lark_client.py  main.py  run_bridge.py  watchdog.py
src/memall/cli/: backup_restore.py  export.py  handle_call.py  main.py  register.py  setup.py  (+1 more)
tests/: TESTING.md  __init__.py  benchmark.py  conftest.py  quality_test.py  smoke_test.py  stress_test.py  test_adaptive.py  test_arc_status.py  test_backup.py  test_bridge.py  test_classify.py  test_cluster.py  test_config.py  test_context_assembler.py  test_convergence.py  test_core_db.py  test_core_utils.py  test_decay.py  test_distill.py  test_distill_l7.py  test_e2e.py  test_embeddings.py  test_enrich.py  test_entity_extractor.py  test_epoch.py  test_exporter.py  test_federation_family.py  test_federation_health.py  test_forget.py  test_gateway.py  test_gateway_html.py  test_gateway_utils.py  test_helpers.py  test_hooks.py  test_improve.py  test_link.py  test_mcp_tools.py  test_metrics.py  test_narrative.py  (+19 more)
(+152 files in other folders)
